--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -304,7 +304,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:visibility="invisible"
-                android:onClick="onClickButtonScan"
+                android:onClick="onClickButtonSelection"
                 app:srcCompat="@drawable/resource_continue" />
         </LinearLayout>
 
