--- a/app/src/main/res/layout/activity_selection.xml
+++ b/app/src/main/res/layout/activity_selection.xml
@@ -9,9 +9,24 @@
     tools:context=".SelectionActivity">
 
     <ImageView
+        android:id="@+id/birdImg1"
+        android:layout_width="0dp"
+        android:layout_height="350dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginEnd="28dp"
+        android:alpha="1"
+        android:onClick="changeBirdState"
+        android:tag="chosen"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/bird1" />
+
+    <ImageView
         android:id="@+id/branch21"
         android:layout_width="330dp"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:layout_marginStart="180dp"
         android:layout_marginBottom="280dp"
         android:alpha="1"
@@ -25,7 +40,7 @@
     <ImageView
         android:id="@+id/branch11"
         android:layout_width="150dp"
-        android:layout_height="wrap_content"
+        android:layout_height="180dp"
         android:layout_marginTop="500dp"
         android:layout_marginEnd="270dp"
         android:alpha="1"
@@ -36,22 +51,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/branch1" />
-
-    <ImageView
-        android:id="@+id/birdImg1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginEnd="28dp"
-        android:alpha="1"
-        android:onClick="changeBirdState"
-        android:tag="chosen"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/bird1" />
-
 
     <LinearLayout
         android:layout_width="match_parent"
