--- a/app/src/main/res/layout/activity_hue.xml
+++ b/app/src/main/res/layout/activity_hue.xml
@@ -204,6 +204,7 @@
                         android:layout_marginEnd="20dp"
                         android:layout_marginBottom="18dp"
                         android:layout_weight="1"
+                        android:onClick="showBlock"
                         android:orientation="vertical">
 
                         <ImageView
@@ -321,7 +322,7 @@
         android:layout_height="match_parent"
         android:alpha="0.75"
         android:background="@color/black"
-        android:tag="inVisible"
+        android:tag="invisible"
         android:visibility="invisible" />
 
     <LinearLayout
@@ -524,7 +525,6 @@
                         android:layout_height="match_parent"
                         android:layout_marginRight="10dp"
                         android:layout_weight="1"
-                        android:onClick="hideBar"
                         app:srcCompat="@drawable/cancel" />
 
                     <ImageView
