--- a/app/src/main/res/layout/activity_detail_data.xml
+++ b/app/src/main/res/layout/activity_detail_data.xml
@@ -127,12 +127,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginStart="25dp"
-                android:layout_marginTop="500dp"
+                android:layout_marginTop="470dp"
                 android:layout_marginEnd="45dp"
                 android:layout_weight="0.5"
                 android:orientation="horizontal"
                 android:tag="inVisible"
-                android:visibility="invisible">
+                android:visibility="invisible"
+                tools:visibility="visible">
 
                 <TextView
                     android:id="@+id/textView9"
@@ -187,12 +188,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_marginStart="25dp"
-                android:layout_marginTop="490dp"
+                android:layout_marginTop="460dp"
                 android:layout_marginEnd="30dp"
                 android:layout_weight="0.5"
                 android:orientation="horizontal"
                 android:tag="inVisible"
-                android:visibility="invisible">
+                android:visibility="invisible"
+                tools:visibility="visible">
 
                 <View
                     android:layout_width="0dp"
@@ -226,12 +228,6 @@
             android:layout_weight="1.5"
             android:background="@drawable/bg2">
 
-
-            <View
-                android:id="@+id/view17"
-                android:layout_width="30dp"
-                android:layout_height="match_parent" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -241,6 +237,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_marginTop="20dp"
+                    android:layout_marginStart="30dp"
                     android:layout_marginEnd="40dp"
                     android:layout_marginBottom="20dp"
                     android:layout_weight="1">
@@ -315,6 +312,7 @@
                             <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
+                                android:layout_marginStart="30dp"
                                 android:adjustViewBounds="true"
                                 android:src="@drawable/detail1" />
 
