update the method from succeed page to the person page

--- a/app/src/main/res/layout/activity_succeed.xml
+++ b/app/src/main/res/layout/activity_succeed.xml
@@ -75,12 +75,13 @@
 
 
         <TextView
-            android:id="@+id/welcome"
+            android:id="@+id/succeed"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginBottom="10dp"
             android:layout_weight="1"
             android:text="Succeed"
+            android:tag="unSucceed"
             android:textColor="@color/primaryColor"
             android:textSize="42sp"
             android:textStyle="bold" />
@@ -118,6 +119,7 @@
             android:layout_height="0dp"
             android:layout_marginBottom="0dp"
             android:layout_weight="1"
+            android:onClick="onClickButtonPerson"
             app:cardCornerRadius="25dp"
             app:cardElevation="4dp">
 
