--- a/app/src/main/res/layout/activity_succeed.xml
+++ b/app/src/main/res/layout/activity_succeed.xml
@@ -62,7 +62,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:onClick="onClickButtonPerson"
+                    android:onClick="onClickButtonSucceedToPerson"
                     app:srcCompat="@drawable/portfilo" />
             </LinearLayout>
 
@@ -119,7 +119,7 @@
             android:layout_height="0dp"
             android:layout_marginBottom="0dp"
             android:layout_weight="1"
-            android:onClick="onClickButtonPerson"
+            android:onClick="onClickButtonSucceedToPerson"
             app:cardCornerRadius="25dp"
             app:cardElevation="4dp">
 
